# vkgears

./: CMakeLists.txt  README.md
shaders/: gears.fsh  gears.v410.frag  gears.v410.vert  gears.vsh  simple.frag  simple.fsh  simple.vert  simple.vsh
src/: gl1_gears.c  gl2_gears.c  gl2_util.h  gl3_gears.c  gl4_1_gears.c  gl4_gears.c  vk1_gears.c
